--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,7 +16,7 @@
 </p>
 
 <p>
-  <%= @product.created_at.strftime("%B %d %Y, %l:%M%P") %>
+  <%= (product.created_at.strftime("%B %d %Y, %l:%M%P"))  %>
 </p>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
