--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -24,7 +24,7 @@
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         
-        <td><%= product.strftime("%B %d %Y, %l:%M%P") %></td>
+        <td><%= {product.strftime("%B %d %Y, %l:%M%P")} %></td>
   
          
         
