--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <%= product.created_at.strftime("Posted on %B %d, %Y at %H:%M") %>
+        <td><%= product.created_at.strftime("%FT%T") %></td>
   
          
         
