--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -23,7 +23,7 @@
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <td><%= product.select_datetime(my_date_time) %></td>
+        <td><%= product.select_datetime(my_date_time, order: [:year, :month, :day] %></td>
   
          
         
